--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "Terminal client for trading on various exchanges",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "node  --no-warnings --loader ts-node/esm --experimental-specifier-resolution=node src/index.ts"
   },
   "author": "Nicholas Newell",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.11.12",
+    "inquirer": "^9.1.5",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^9.0.3"
   }
 }
