--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.12",
     "console-clear": "^1.1.1",
     "inquirer": "^9.1.5",
+    "readline": "^1.3.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
