--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.11.12",
+    "bcrypt": "^5.1.0",
     "console-clear": "^1.1.1",
     "inquirer": "^9.1.5",
     "readline": "^1.3.0",
@@ -18,6 +19,7 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/console-clear": "^1.1.0",
     "@types/inquirer": "^9.0.3"
   }
