--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/node": "^16.11.12",
     "bcrypt": "^5.1.0",
     "console-clear": "^1.1.1",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "inquirer": "^9.1.5",
     "readline": "^1.3.0",
     "ts-node": "^10.4.0",
