--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "inquirer": "^9.1.5",
+    "inquirer-autocomplete-prompt": "^3.0.0",
     "readline": "^1.3.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/console-clear": "^1.1.0",
-    "@types/inquirer": "^9.0.3"
+    "@types/inquirer": "^9.0.3",
+    "@types/inquirer-autocomplete-prompt": "^3.0.0"
   }
 }
