--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "inquirer-autocomplete-prompt": "^3.0.0",
     "readline": "^1.3.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/console-clear": "^1.1.0",
     "@types/inquirer": "^9.0.3",
-    "@types/inquirer-autocomplete-prompt": "^3.0.0"
+    "@types/inquirer-autocomplete-prompt": "^3.0.0",
+    "@types/ws": "^8.5.4"
   }
 }
