feat: check orders for min amount and reorg params

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "ccxt": "^3.0.33",
     "console-clear": "^1.1.1",
+    "decimal.js": "^10.4.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
