--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "inquirer": "^9.1.5",
     "inquirer-autocomplete-prompt": "^3.0.0",
     "readline": "^1.3.0",
+    "readline-sync": "^1.4.10",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "ws": "^8.13.0"
@@ -30,6 +31,7 @@
     "@types/console-clear": "^1.1.0",
     "@types/inquirer": "^9.0.3",
     "@types/inquirer-autocomplete-prompt": "^3.0.0",
+    "@types/readline-sync": "^1.4.4",
     "@types/ws": "^8.5.4"
   }
 }
