--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "lib": ["esnext", "dom"],
-    "typeRoots": ["./node_modules/@types", "src/types"]
+    "typeRoots": ["./node_modules/@types", "./src/types", "./plugins/types"]
   },
-  "include": ["src/**/*.ts", "src/types/inquirer-command-prompt.d.ts"],
+  "include": ["src/**/*.ts", "plugins/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
