--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "inquirer": "^9.1.5",
     "inquirer-autocomplete-prompt": "^3.0.0",
+    "ora": "^6.3.0",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.10",
     "ts-node": "^10.4.0",
